--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
 title: b3labs - Basic Building Blocks Labs
 description: Bookmark this site to learn how to program
